# cv_teamproject_camera_app

./: CMakeLists.txt  main.cpp
editdialog/: editdialog.cpp  editdialog.h  editdialog.ui
filter/: filter.h
mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
